Fixed profile picture alignment

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -250,20 +250,26 @@ nav div.avatar-container {
 }
 
 .profile-cropper {
+    position: relative;
     width: 100px;
     height: 100px;
-    position: relative;
     overflow: hidden;
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center top;
 }
 
 .profile-cropper img {
     display: inline;
-    margin: 0 auto;
     height:150%;
     width:auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .follow-button {
